
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   204:  sluys, 13/07/2009
     - Changed doc/input_all/SPINspiral.input.mcmc.  Added:
       - acceptRateTarget: target acceptance rate for MCMC (0.0-1.0)
       - minlogL: inimum value for the log Likelihood to accept a jump
     - Some minor cosmetic changes and cleaning
     
   203:  sluys, 13/07/2009
     - Changed output somewhat
     
   201-202: sluys, 13/07/2009
     - fix memory leaks
     
   200: sluys, 12/07/2009
     - trying to order example input files in doc/: doc/input_all contains WF-independent files
     
   199: sluys, 12/07/2009
     - mcmcParUse[], injParUse[] show whether parameters are used
     - require logL>1 when picking starting values, unless none is found after 10^4 trials
   
   198: sluys, 10/07/2009
     - Changed output format: 
       - added waveform and parameter info to header
       - added posterior and prior to body
     
   197: sluys, 10/07/2009
     - Use the pN order as specified in the input files
     
   196: sluys, 10/07/2009
     - Corrected typo from rev.194
     
   195: sluys, 10/07/2009
     - Changed input files:
       - moved mcmcWaveform from input.mcmc to input.parameters
       - added mcmcPNorder and injectionPNorder to input.parameters and input.injection
       
   194: sluys, 10/07/2009
     - Cleaning and commenting in SPINspiral_lal
     
   193: sluys, 07/07/2009
     - Updated Fugu Makefile
     
   192: sluys, 07/07/2009
     - Updated match, overlap and related routines to work with two different waveforms
     - Removed FrVect.h, FrFilter.h and FrIO.h from include/  
       They're part of libframe, see fugu:/export/apps/libframe/include/ for a recent version
   
   191: sluys, 06/07/2009
     - Added Makefile_Fugu to allow static compilation on Fugu
   
   190: sluys, 24/06/2009
     - Free non-spinning LAL variables
     
   188: sluys, 18/06/2009